--- a/instruments/templates/instruments/guitar_details.html
+++ b/instruments/templates/instruments/guitar_details.html
@@ -1,6 +1,8 @@
 <h2>Details</h2>
+<a href='http://localhost:8000'>Home</a>
+<br>
 <ul>
-	<li>Brand: {{ guitar.brand }}</li>
+	<li>Brand: {{ guitar.brand.name }}</li>
 	<li>Model: {{ guitar.model_name }}</li>
 	<li>Type: {{ guitar.guitar_type }}</li>
 	<li>But does it djent? {{ guitar.djent }}</li>
