--- a/famous_clients/templates/famous_clients/famous.html
+++ b/famous_clients/templates/famous_clients/famous.html
@@ -1,32 +1,9 @@
-<!DOCTYPE html>
-<head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-</head>
-<body>
-	<div class="slideshow">
-		{% for customer in famous_customers %}
-			<div>
-				{{ customer.order }} of {{ famous_customers.count }}
-				<br>
-				{{ customer.name }}
-				<img src="{{ customer.image.url }}">
-				{{ customer.quote }}
-			</div>
-		{% endfor %}
-	</div>
+{% extends "music_store/base.html" %}
 
-	<script
-	  src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-	  integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
-	  crossorigin="anonymous">
-	</script>
-	<script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function(){
-			$('.slideshow').slick();
-		});
-	</script>
-</body>
+{% load famous_clients_tags %}
 
+{% block title %}famous artists{% endblock %}
 
+{% block content %}
+	{% render_client_slideshow famous_customers %}
+{% endblock %}
