--- a/instruments/templates/instruments/all_guitars.html
+++ b/instruments/templates/instruments/all_guitars.html
@@ -1,3 +1,8 @@
+{% extends "music_store/base.html" %}
+
+{% block title %}Guitars{% endblock %}
+
+{% block content %}
 <h2>All Guitars</h2>
 <a href="{% url "index" %}">Home</a>
 <ul>
@@ -7,7 +12,6 @@
             {{ guitar.brand.name }} {{ guitar.model_name }}
         </a>
 	</li>
-
 {% endfor %}
 </ul>
-
+{% endblock %}
