add form feature

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -28,6 +28,7 @@
 
 <a href="{% url "payment-methods" %}">Payment Methods</a>
 
+<div><a href="{% url "contact" %}">Contact us</a></div>
 <div>
 	{% render_client_slideshow featured_customers %}
 
